--- a/style.css
+++ b/style.css
@@ -139,9 +139,118 @@ main{
 
 .section1 .left #Scratch{
     color:#cfcfcf;
+    margin-top: 5px;
     font-size: 1.1em;
     font-weight: 600;
     font-family: 'Poppins';
+}
+
+.section1 .right{
+    width: 45%;
+}
+
+.section1 .right .right-in{
+    max-width: 600px;
+    background-color: #02e797;
+    border-radius: 15px;
+}
+
+.section1 .right .right-in .right-img{
+    width: 100%;
+}
+
+.section1 .right .right-in .right-img img{
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+.section1 .right .right-in .Bottom{
+    padding: 15px;
+    /* background-color: #1e1e1e; */
+    background-color: #121212;
+    padding-bottom: 15px;
+    padding-top: 40px;
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    align-items: stretch;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+
+.section1 .right .right-in .Bottom h4{
+    color: #cfcfcf;
+    font-weight: 500;
+    background-color: #151515;
+    padding: 12.5px;
+    width: 45%;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(9px);
+    -webkit-backdrop-filter: blur(9px);
+    /* border: 1px solid rgba(255, 255, 255, 0.24); */
+    font-size: 1.10em;
+    border-radius: 5px;
+}
+
+.Bottom .gr{
+    color: #02e797;
+    font-weight: 400;
+    font: 1em;
+}
+
+.Bottom .time{
+    margin-left: 5px;
+    color: #cfcfcf;
+    font-weight: 400;
+    font-size: 0.9em;
+}
+
+.section1 .left .buttons{
+    margin: 15px 0px;
+    display: flex;
+    height: 40px;
+    align-items: center;
+    gap: 20px;
+}
+
+.buttons .bt1{
+    margin-top: 10px;
+    background-color: #009650;
+    border-radius: 10px;
+    color: #fff;
+    width: 40%;
+    height: 60px;
+    padding: 10px 60px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    font-family: 'Outfit';
+}
+
+.buttons .bt2{
+    background-color: #353535;
+    margin-top: 10px;
+    border-radius: 10px;
+    font-weight: 500;
+    height: 60px;
+    color: #fff;
+    padding: 10px 60px;
+    font-size: 20px;
+}
+
+.left h6{
+    margin-top: 30px;
+    color: #e9e9e9;
+    font-weight: 300;
+    font-size: 1.2em;
+}
+
+.left h6 span{
+    color: #02e797;
 }
 
 
