--- a/style.css
+++ b/style.css
@@ -290,3 +290,111 @@ main{
         justify-content: center;
     }
 }
+
+
+@media (max-width: 1200px){
+    .section1 .left h1{
+        font-size: 4vw;
+    }
+
+    .section1 .left .buttons{
+    margin: 15px 0px;
+    display: flex;
+    height: 40px;
+    width: 100vw;
+    align-items: center;
+    gap: 20px;
+}
+}
+
+
+@media (max-width: 800px){
+
+.left h6{
+    margin-top: 30px;
+    color: #e9e9e9;
+    font-weight: 300;
+    font-size: 1.2em;
+    width: 100vw;
+}
+
+.left h6 span{
+    color: #02e797;
+}   
+.section1 .left .buttons{
+    margin: 15px 0px;
+    display: flex;
+    height: 40px;
+    width: 100vw;
+    align-items: center;
+    gap: 20px;
+}
+
+.buttons .bt1{
+    margin-top: 15px;
+    background-color: #009650;
+    border-radius: 10px;
+    color: #fff;
+    width: 40vw;
+    height: 60px;
+    padding: 10px 60px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    font-family: 'Outfit';
+}
+
+.buttons .bt2{
+    background-color: #353535;
+    margin-top: 15px;
+    border-radius: 10px;
+    font-weight: 500;
+    height: ;
+    flex-wrap: wrap;
+    color: #fff;
+    padding: 10px 60px;
+    font-size: 20px;
+    width: 40vw;
+}
+.section1 .left .price {
+    margin-top: 80px;
+    width: 100vw;
+    color: white;
+    font-size: 35px;
+    font-family: "Helvetica Neue";
+}
+
+.section1 .left .price .crp {
+    color: #02e797;
+    font-size: 35px;
+    font-family: "Outfit";
+    width: 100%;
+}
+
+.section1 .left .price .ogp {
+    color: #cfcfcf;
+    font-size: 26px;
+    font-weight: 500;
+    opacity: 0.7;
+    font-family: "Outfit";
+    text-decoration: line-through;
+}
+
+.section1 .left .price #gst {
+    font-size: 26px;
+    font-weight: 500;
+}
+
+.section1 .left #Scratch{
+    color:#cfcfcf;
+    margin-top: 5px;
+    font-size: 1.1em;
+    font-weight: 600;
+    font-family: 'Poppins';
+}
+}
+
+/* @media (max-width: 600px){
+    .section1 .left h1{
+        font-size: 4vw;
+    }
+} */
